# TermRender

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
logs/: render_logs.txt
src/: Angles.h  Axes.h  DebugRenderer.cpp  DebugRenderer.h  EdgeCalculation.cpp  EdgeCalculation.h  Logger.cpp  Logger.h  Point2_Int.cpp  Point2_Int.h  Point3.cpp  Point3.h  Point3_Float.cpp  Point3_Float.h  Quaternion.cpp  Quaternion.h  Renderer.cpp  Renderer.h  RotationQuat.cpp  RotationQuat.h  Shape.h  ShapeType.h  ShapeWithVertices.cpp  ShapeWithVertices.h  ShapeWithoutVertices.h  Vector3.cpp  Vector3.h  main.cpp
